# Jarvis

./: .gitignore  README.md  jarvis_v7.html  pyproject.toml
jarvis-desktop-app/src/: chat.html  chat.js  index.html  login.html  login.js  styles.css
jarvis-desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
jarvis-desktop-app/src-tauri/src/: lib.rs  main.rs
misc/: jarvis_v9.html
src/: api_classes.py  auth.py  chatbot.py  config.py  main.py
tests/: chat_simples.py
