[project]
name = "jarvis"
version = "0.1.2"
description = "Personal Assistant Application that focuses on project building and evolving over time, totally local or hosted at home."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
dev = "src.main:run"
 
[tool.uv]
package = true
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["src"]
 
